# hattivatti

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  push_dev.yml  pyright.yml  ruff.yml  rust.yml
chart/: Chart.yaml  values-example.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  jobquota.yaml  rbac.yml  secrets.yaml  service.yaml  serviceaccount.yaml
data/db/: schema.sql  setup.sql
data/schemas/: api.json  samplesheet.json
data/templates/: allas.config  callback.txt  env_vars.txt  header.txt  nxf.sh  nxf.txt  setup.txt
data/transfer/: transfer.sh
helmvatti/: values-example.yaml
helmvatti/templates/: job-config.yaml  job.yaml  secrets.yaml
pyvatti/: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
pyvatti/helmvatti/: Chart.yaml  values-example.yaml
pyvatti/helmvatti/templates/: NOTES.txt  job-config.yaml  job.yaml  pgs-config.yaml  secrets.yaml  serviceaccount.yaml  transfer-config.yaml  transfer-secrets.yaml
pyvatti/src/hattivatti/: main.py  statemachine.py
pyvatti/src/pyvatti/: __init__.py  config.py  db.py  helm.py  job.py  jobmodels.py  jobstates.py  logmodels.py  main.py  messagemodels.py  models.py  monitor.py  notifymodels.py  pgsjob.py  render_cli.py  resources.py  statemachine.py
pyvatti/src/pyvatti/cli/: render.py
pyvatti/tests/: test_render.py
pyvatti/tests/data/: seqera-error.json  seqera-response.json  test.json
src/: db.rs  main.rs  namespace.rs  request.rs  slurm.rs
src/db/: job.rs  open.rs
src/db/ingest/: message.rs
src/db/job/: load.rs  stage.rs  state.rs  update.rs
src/db/load/: message.rs
src/db/submit/: load.rs
src/request/: job.rs  message.rs  read.rs  schema.rs
src/slurm/: job.rs  job_request.rs
tests/data/: test.json
