[package]
name = "hattivatti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.97"
log = "0.4"
env_logger = "0.10.0"
serde = { version = "1.0.164", features = ["derive"]}
jsonschema = "0.17.0"
url = "2.4.0"
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
tinytemplate = "1.2.1"
chrono = "0.4.26"
