[tool.poetry]
name = "pyvatti"
version = "1.0.0"
description = "A job submitter for the INTERVENE platform"
authors = ["Benjamin Wingfield <bwingfield@ebi.ac.uk>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "pyvatti", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
transitions = "^0.9.2"
google-cloud-storage = "^2.18.2"
pydantic-settings = "^2.2.1"
schedule = "^1.2.2"
httpx = "^0.27.2"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"
kafka-python-ng = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
filterwarnings = ["error"]