[project]
name = "hattivatti"
version = "2.1.1"
description = "A job submitter for GeneticScores.org"
license = {text = "Apache License (2.0)"}
authors = [
    {name = "Benjamin Wingfield", email = "bwingfield@ebi.ac.uk"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]

requires-python = ">=3.12"

dependencies = [
    "google-cloud-storage>=3.0.0",
    "httpx>=0.28.1",
    "kafka-python-ng>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pyyaml>=6.0.2",
    "schedule>=1.2.2",
    "transitions>=0.9.2",
]

[project.scripts]
pyvatti = "pyvatti.main:main"

[dependency-groups]
lint = [
    "ruff>=0.9.4",
    "mypy>=1.14.1",
    "types-pyyaml>=6.0.12"
    ]
test = [
    "pytest>=8.3.4",
    "pytest-coverage>=0.0",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--doctest-modules"
pythonpath = [
  "src"
]

[tool.coverage.run]
source = ["src/pyvatti", "tests"]
concurrency = ["multiprocessing"]
parallel = true
sigterm = true

[tool.uv]
default-groups = ["test", "lint"]

[tool.mypy]
files = ["src/**/*.py"]
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_calls = false
disallow_incomplete_defs = true

